public static class TagManager
{

    public static string JUMP_ANIMATION_PARAMETER = "Jump";
    public static string ATTACK_ANIMATION_PARAMETER = "Attack";
    public static string DEATH_ANIMATION_PARAMETER = "Death";
    public static string RUN_ANIMATION_PARAMETER = "Run";


    public static string PLAYER_TAG = "Player";


}




























